--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
                         <div class="col-xs-2">First Date</div>
                         <div class="col-xs-2">{{bodyCtrl.firstDate}}</div>
                         <div class="col-xs-2">Spread:</div>
-                        <div class="col-xs-2">{{bodyCtrl.spread}}</div>
+                        <div class="col-xs-2">{{bodyCtrl.spread}} days</div>
                     </div>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-2">Last Date</div>
                         <div class="col-xs-2">{{bodyCtrl.lastDate}}</div>
+                        <div class="col-xs-2">Frequency:</div>
+                        <div class="col-xs-2">{{bodyCtrl.frequency}} posts/day</div>
                     </div>
                 </div>
             </div>
